--- a/package.json
+++ b/package.json
@@ -6,11 +6,10 @@
     "node": "9.10.1"
   },
   "scripts": {
-    "build": "node ./start.js",
+    "start": "node ./index.js",
     "watch": "nodemon ./start.js --ignore public/",
     "dev": "concurrently \"npm run watch\" \"npm run assets\" --names \"💻,📦\" --prefix name",
-    "assets": "webpack -w --display-max-modules 0",
-    "now": "now -e DB_USER=@db_user -e DB_PASS=@db_pass -e NODE_ENV=\"production\" -e PORT=80"
+    "assets": "webpack -w --display-max-modules 0"
   },
   "browserslist": "last 3 versions",
   "dependencies": {
