--- a/now.json
+++ b/now.json
@@ -2,7 +2,6 @@
     "version": 2,
     "name": "frontend-reviews",
     "builds": [
-        { "src": "index.js", "use": "@now/node" },
-        { "src": "public/*", "use": "@now/static" }
+        { "src": "index.js", "use": "@now/node" }
     ]
 }
